add delete sweg
