# docs/swagger.yaml
@@ -150,6 +150,75 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /delete-jurusan/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus data jurusan.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Delete data jurusan.
+      tags:
+      - Penerimaan Mahasiswa Baru
+  /delete-pendaftaran/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus data pendaftaran.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Delete data pendaftaran.
+      tags:
+      - Penerimaan Mahasiswa Baru
+  /delete-sekolah/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus data sekolah.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Delete data sekolah.
+      tags:
+      - Penerimaan Mahasiswa Baru
   /delete/{id}:
     delete:
       consumes:
@@ -283,7 +352,7 @@ paths:
       summary: Get By ID Data Pendaftaran.
       tags:
       - Penerimaan Mahasiswa Baru
-  /pendaftaran/{kdpendaftar}:
+  /pendaftaran/kd/{kdpendaftar}:
     get:
       consumes:
       - application/json
